--- a/client/src/pages/policies/policies.css
+++ b/client/src/pages/policies/policies.css
@@ -6,7 +6,7 @@
 
 .policybox {
     /* display: flex; */
-    padding: 20px;
+    padding: 0 5rem;
  border-radius: 30px;
  height: 60vh;
  width: 50vh;
