--- a/client/src/index.css
+++ b/client/src/index.css
@@ -128,7 +128,8 @@
     position: absolute;
     left:-10px;
     /* bottom: -10px; */
-    background-color: #021122;
+    /* background-color: #021122; */
+    background-color:var(--text-color);
     height: 50px;
     width: 5px;
     box-sizing: border-box;
@@ -222,7 +223,7 @@ padding: 2rem 5rem;
 
 
 .policyContainer {
-    padding: 4rem 4rem;
+    padding: 4rem 15rem;
     align-items: left;
     text-align: left;
 }
